--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
     <footer>
         <p>Desarrollado por Pedro Espigares</p>
-        <p>Código disponible en <a href="https://github.com/pedroespigares" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>.</p>
+        <p>Código disponible en <a href="https://github.com/pedroespigares/reminders-list" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>.</p>
     </footer>
 </body>
 </html>
